# my-database

./: .gitignore  README.md  pyproject.toml
.github/workflows/: black.yml  isort.yml  mypy.yml  pylint.yml  pytest.yml
docs/backlog/: 01.md  02.md  03.md  04.md  05.md  README.md
src/mydb/: __init__.py
src/mydb/core/: __init__.py  exceptions.py
src/mydb/file/: __init__.py  monolith.py  segment.py
src/mydb/index/: in_memory.py
src/mydb/interface/: __init__.py  file.py  index.py
src/mydb/storage/: __init__.py  abc.py  abstract.py  engine.py  index.py  logger.py
tests/storage/: conftest.py  helpers.py  test_index.py  test_logger.py
